Fix spacing of larger creator type dropmarker on Windows

--- a/chrome/content/zotero-platform/win/itemPane.css
+++ b/chrome/content/zotero-platform/win/itemPane.css
@@ -21,6 +21,7 @@
 #zotero-editpane-dynamic-fields row > toolbarbutton
 {
 	margin-right: 5px;
+	-moz-image-region: rect(2px, 14px, 18px, 0px);
 }
 
 #zotero-editpane-dynamic-fields row vbox[fieldname=abstractNote],
